[package]
name = "r-epub"
version = "0.2.2"
edition = "2021"
authors = ["Tallone"]
license = "MIT"
repository = "https://github.com/Tallone/r-epub"
description = "Library to support parse .epub file"


[dependencies]
log = "0.4.21"
quick-xml = { version = "0.31.0", features = ["serialize", "overlapped-lists"] }
scraper = "0.19.0"
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.60"
zip = { version = "1.2.2", default-features = false, features = [
  "deflate",
  "deflate64",
] }
